--- a/index.css
+++ b/index.css
@@ -1,16 +1,23 @@
 #gameboard {
-    margin: auto;
-    display:grid;
+    margin: 5vw auto;
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    width: 50vw;
-    height: 50vw;
-
+    min-width: 35vw;
+    min-height: 35vw;
+    max-width: 35vw;
+    max-height: 35vw;
 }
 
 .board-space {
     text-align: center;
     align-items: center;
+    font-size: 7vw;
+    max-width: 11.66vw;
+    max-height: 11.66vw;
+    min-width: 11.66vw;
+    min-height: 11.66vw;
+    font-family: 'Poppins', sans-serif;
 }
 
 #overlay {
@@ -36,23 +43,78 @@
 }
 
 .bottom-right {
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
 }
 
 .bottom {
-    border-bottom: 1px solid black;
+    border-bottom: 3px solid black;
 }
 
 .bottom-left {
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
+    border-bottom: 3px solid black;
+    border-left: 3px solid black;
 }
 
 .right {
-    border-right: 1px solid black;
+    border-right: 3px solid black;
 }
 
 .left {
-    border-left: 1px solid black;
+    border-left: 3px solid black;
+}
+
+#title {
+    text-align: center;
+    margin: auto;
+    font-size: 4vw;
+    font-family: 'Oswald', sans-serif;
+}
+
+#start-overlay {
+    position: fixed; 
+    display: block; 
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2;
+}
+
+#start-content {
+    margin: 15vw auto;
+    width: 25vw;
+    height: 20vw;
+    border-radius: 5px;
+    background: rgb(255, 224, 102, 0.9);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "p1label    p2label"
+    "p1name     p2name"
+    "play         ...";
+}
+
+.p1-label {
+    grid-area: 'p1label';
+}
+
+.p1-name {
+    grid-area: 'p1name';
+}
+
+.p2-label {
+    grid-area: 'p2label';
+}
+
+.p2-name {
+    grid-area: 'p2name'
+}
+
+.play-button-cell {
+    grid-area: 'play';
 }
