--- a/index.css
+++ b/index.css
@@ -106,6 +106,12 @@
     width: 17.5vw;
     height: 15vw;
     order: 1;
+    font-family: 'Source Code Pro', monospace;
+}
+
+.color-label {
+    font-size: 1rem;
+    margin-top: 10px;
 }
 
 .p1-form > label {
@@ -158,7 +164,8 @@
     order: 3;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    margin-top: 50px;
 }
 
 .play > button {
